version/0.18/_sources/api/solver/_autosummary/settings/particle_mixture.rst.txt
:orphan:

.. _particle_mixture:

particle_mixture
================

.. autoclass:: ansys.fluent.core.solver.settings_232.particle_mixture.particle_mixture
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`particle_mixture_child <particle_mixture_child>`


.. rubric:: Included in:

============================   ======================

Parent                                        Summary

============================   ======================
:ref:`materials <materials>`       'materials' child.

============================   ======================

